Fix: removed italic quote style, improved readability.

--- a/css/hux-blog.min-darkmode.css
+++ b/css/hux-blog.min-darkmode.css
@@ -179,7 +179,6 @@ article {
 }
 blockquote {
   color: #fff;
-  font-style: italic;
   font-size: 0.95em;
   margin: 20px 0 20px;
 }
